--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,13 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+h1 {
+    color: blue;
+}
+
+input {
+    border-color: blanchedalmond;
+}
+
+
+
